Refactor names and taking out image updating

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ img {
     margin: 10px;
 }
 
-.variant {
+.ship {
     border: solid black 2px;
     background-color: #ec896a;
     border-radius: 10px;
