--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,20 @@ img {
     margin: 10px;
 }
 
-.ship {
+.ship-button {
     border: solid black 2px;
     background-color: #ec896a;
     border-radius: 10px;
+    transition: box-shadow .2s;
+    width: 100px;
+    height: 50px;
+}
+
+.ship-button:hover {
+    margin-top: -18px;
+    box-shadow: 0 0 50px #aef9ef;
+    width: 120px;
+    height: 60px;
 }
 
 .fat {
