--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ img {
     height: 100%;
 }
 
+.boxBackground {
+    background: #befefe;
+    opacity: 0.6;
+}
 .image-panel {
     align-self: center;
 }
@@ -46,8 +50,14 @@ img {
     flex-direction: row;
 }
 
-.amount {
-    margin: 10px;
+.modules-panel {
+    align-self: center;
+    color: black;
+    font-size: 20px;
+    border: solid white 2px;
+    border-radius: 10px;
+    width: 280px;
+    height: 260px;
 }
 
 .ship-button {
@@ -68,5 +78,5 @@ img {
 
 .fat {
     margin: 5px;
-    padding: 5px;
+    padding: 10px;
 }
