--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,14 @@ img {
     height: 100%;
 }
 
+.blue-color-scheme {
+    color: white;
+    border: solid black 2px;
+    border-radius: 10px;
+    background: #1d3a54;
+    opacity: 0.6;
+}
+
 .boxBackground {
     background: #befefe;
     opacity: 0.6;
@@ -52,18 +60,12 @@ img {
 
 .modules-panel {
     align-self: center;
-    color: black;
     font-size: 20px;
-    border: solid white 2px;
-    border-radius: 10px;
     width: 280px;
     height: 260px;
 }
 
 .ship-button {
-    border: solid black 2px;
-    background-color: #ec896a;
-    border-radius: 10px;
     transition: box-shadow .2s;
     width: 100px;
     height: 60px;
